Wasted Hours On Trying To Make Linux Colors Works.